2016-12-26  Kubo Takehiro  <kubo@jiubao.org>
	* lib/oci8/bindtype.rb, lib/oci8/compat.rb, lib/oci8/oci8.rb,
	  test/config.rb: Suppress "warning: constant ::Fixnum is deprecated"
	  and "warning: constant ::Bignum is deprecated" due to integer
	  unification in ruby 2.4.0.

2016-12-14  Koichi ITO  <koic.ito@gmail.com>
	* ext/oci8/ocinumber.c:	Fix invalid value for BigDecimal in
	    Ruby 2.4.0+

2016-09-25  Kubo Takehiro  <kubo@jiubao.org>
	* ext/oci8/metadata.c, ext/oci8/oci8.c: Fix load error when
	    GC.stress = true.

2016-09-11  Kubo Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8.h: Suppress 'warning: "ALWAYS_INLINE" redefined' when
	   compiled for ruby 2.4.0-preview2.

2016-05-28  Kubo Takehiro  <kubo@jiubao.org>
	* docs/install-on-osx.md: Update installation document about OS X again.

2016-05-28  Kubo Takehiro  <kubo@jiubao.org>
	* docs/install-on-osx.md: Update installation document about OS X.

2016-04-24  Kubo Takehiro  <kubo@jiubao.org>
	* mkpkg-win32.rb: Added to compile mingw32 packages.
	* dist-files: Updated to include docs/report-installation-issue.md.

2016-04-24  Kubo Takehiro  <kubo@jiubao.org>
	* NEWS: Add changes between 2.2.1 and 2.2.2.
	* lib/oci8/version.rb: update to 2.2.2.

2016-04-24  Kubo Takehiro  <kubo@jiubao.org>
	* docs/report-installation-issue.md: Use RbConfig::CONFIG instead of
	   deprecated Config::CONFIG.

2016-04-24  Kubo Takehiro  <kubo@jiubao.org>
	* lib/oci8/oci8.rb: Add OCI8::in_cond and OCI8:InCondBindHelper.
	* test/test_all.rb, test/test_bind_array.rb: Add test of OCI8::in_cond.
	* README.md, docs/bind-array-to-in_cond.md: Add document of OCI8::in_cond.

2016-04-10  Kubo Takehiro  <kubo@jiubao.org>
	* lib/oci8/connection_pool.rb: update document.

2016-03-27  Kubo Takehiro  <kubo@jiubao.org>
	* lib/oci8/object.rb: Suppress warning: instance variable
	    @name_to_tdo not initialized.

2016-03-27  Kubo Takehiro  <kubo@jiubao.org>
	* ext/oci8/apiwrap.yml, ext/oci8/metadata.c, ext/oci8/object.c,